[gd_scene load_steps=18 format=3 uid="uid://d3rmuty5a2ewx"]

[ext_resource type="Script" path="res://Player.gd" id="1_3f7vu"]
[ext_resource type="AudioStream" uid="uid://b24guh1jtu228" path="res://Audio/SFX - Death Explosion.ogg" id="2_2xh1k"]
[ext_resource type="AudioStream" uid="uid://dglxruul4dy36" path="res://Audio/SFX - Success.ogg" id="3_2n8qf"]
[ext_resource type="AudioStream" uid="uid://dumc6dvn6kn8b" path="res://Audio/SFX - Main engine thrust.ogg" id="4_lv1ao"]
[ext_resource type="PackedScene" uid="uid://ux6ivcx1ovdp" path="res://Particles/booster_particles.tscn" id="5_s1ddk"]
[ext_resource type="PackedScene" uid="uid://dcecb8hw7dbrv" path="res://Particles/explosion_particles.tscn" id="6_i2smk"]
[ext_resource type="PackedScene" uid="uid://jfwajmrh6ca7" path="res://Particles/success_particles.tscn" id="7_fbrou"]
[ext_resource type="Material" uid="uid://btnii3jt347sp" path="res://ShipOrangeMaterial.tres" id="8_cicaa"]

[sub_resource type="CylinderMesh" id="CylinderMesh_85g27"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_agkom"]

[sub_resource type="CylinderMesh" id="CylinderMesh_lrg8x"]
top_radius = 0.2
bottom_radius = 0.2
height = 1.5

[sub_resource type="CylinderMesh" id="CylinderMesh_hqa24"]
top_radius = 0.0
bottom_radius = 0.2
height = 0.5

[sub_resource type="CylinderMesh" id="CylinderMesh_f0vud"]
top_radius = 0.25
bottom_radius = 0.25
height = 0.25

[sub_resource type="CylinderMesh" id="CylinderMesh_ujemo"]
top_radius = 0.25
bottom_radius = 0.25
height = 0.4

[sub_resource type="BoxMesh" id="BoxMesh_edhgu"]
size = Vector3(0.2, 0.4, 0.2)

[sub_resource type="CylinderMesh" id="CylinderMesh_58bnk"]
top_radius = 0.15
bottom_radius = 0.15
height = 0.4

[sub_resource type="TorusMesh" id="TorusMesh_hpxea"]
inner_radius = 0.4
outer_radius = 0.5

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
max_contacts_reported = 10
contact_monitor = true
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_3f7vu")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CylinderMesh_85g27")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_agkom")

[node name="ExplosionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_2xh1k")

[node name="SuccessAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2n8qf")

[node name="RocketAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_lv1ao")

[node name="BoosterParticles" parent="." instance=ExtResource("5_s1ddk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="RightBoosterParticles" parent="." instance=ExtResource("5_s1ddk")]
transform = Transform3D(0.965495, -0.26042, 0, 0.26042, 0.965495, 0, 0, 0, 1, 0.438367, -0.800492, 0)

[node name="LeftBoosterParticles" parent="." instance=ExtResource("5_s1ddk")]
transform = Transform3D(0.965622, 0.259948, 0, -0.259948, 0.965622, 0, 0, 0, 1, -0.4, -0.8, 0)

[node name="ExplosionParticles" parent="." instance=ExtResource("6_i2smk")]

[node name="SuccessParticles" parent="." instance=ExtResource("7_fbrou")]

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
mesh = SubResource("CylinderMesh_lrg8x")

[node name="Cockpit" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material_override = ExtResource("8_cicaa")
mesh = SubResource("CylinderMesh_hqa24")
skeleton = NodePath("../..")

[node name="Midriff" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
material_override = ExtResource("8_cicaa")
mesh = SubResource("CylinderMesh_f0vud")
skeleton = NodePath("../..")

[node name="Thruster" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.542557, 0)
material_override = ExtResource("8_cicaa")
mesh = SubResource("CylinderMesh_ujemo")
skeleton = NodePath("../..")

[node name="LeftArm" type="MeshInstance3D" parent="Body"]
transform = Transform3D(0.76693, 0.641731, 0, -0.641731, 0.76693, 0, 0, 0, 1, -0.257796, -0.14396, 0)
material_override = ExtResource("8_cicaa")
mesh = SubResource("BoxMesh_edhgu")

[node name="Thruster" type="MeshInstance3D" parent="Body/LeftArm"]
transform = Transform3D(0.819152, -0.573576, 0, 0.573576, 0.819152, 0, 0, 0, 1, 0.0586061, -0.32792, 0)
material_override = ExtResource("8_cicaa")
mesh = SubResource("CylinderMesh_58bnk")

[node name="RightArm2" type="MeshInstance3D" parent="Body"]
transform = Transform3D(-0.767165, -0.64145, -8.74228e-08, -0.64145, 0.767165, 0, 6.70677e-08, 5.60773e-08, -1, 0.258, -0.144, 0)
material_override = ExtResource("8_cicaa")
mesh = SubResource("BoxMesh_edhgu")

[node name="Thruster" type="MeshInstance3D" parent="Body/RightArm2"]
transform = Transform3D(0.819152, -0.573576, 0, 0.573576, 0.819152, 0, 0, 0, 1, 0.059, -0.328, 0)
material_override = ExtResource("8_cicaa")
mesh = SubResource("CylinderMesh_58bnk")

[node name="BaseRing" type="MeshInstance3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.455372, 0)
mesh = SubResource("TorusMesh_hpxea")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
